added more detail to parameters description

--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -76,7 +76,7 @@ Of particular relevance to buffer preparation are efforts to simulate tank farm
 design \citep{Al-Otaibi:2004, Stewart:2005, Sharda:2009, Terrazas-Moreno:2012}.
 Tank farms commonly exist in large pharmaceutical, chemical and oil \&
 gas facilities and consist of arrays of tens of tanks that are usually dedicated
-to particular chemicals or products, but may me multi-use.  These tanks are used
+to particular chemicals or products, but may be multi-use.  These tanks are used
 to support the main process being carried out in the facility, similar to the
 role of buffer hold vessels.  There are a great deal of papers that deal with
 optimising throughput or productivity of existing tank farms or existing batch
@@ -150,8 +150,8 @@ carried out over the half century following Dantzig's paper are given by
 One knapsack-type problem that may be of particular relevance is the bin-packing
 problem.  \citet{Martello:1990} describes the bin packing problem as one in
 which there are a number of items with associated weights and a number of bins
-with associated capacities.  The aim is to each item to a bin so that the weight
-capacity of the bin is not exceeded and the number of bins is minimised.
+with associated capacities.  The aim is to assign each item to a bin so that the
+weight capacity of the bin is not exceeded and the number of bins is minimised.
 A number of algorithms for both exact and approximate solutions of the
 bin-packing problem have been developed. \citet{Korte:2012} state that the
 bin-packing problem is strongly \textbf{NP}-hard, indicating that efforts
