--- a/tex/ch5.tex
+++ b/tex/ch5.tex
@@ -43,6 +43,6 @@ The equipment time utilisation plot for the sample data given in
 \begin{figure}
     \centering
     \includegraphics[angle=0,scale=0.55]{../examples/large-scale/plot2.pdf}
-    \caption{Equipment Time Utilisation for Large-Scale Example}
+    \caption{Equipment time utilisation for large-scale example}
     \label{fig.etu}
 \end{figure}
