work on complexity of model

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -157,6 +157,17 @@
   doi = {10.1145/361604.361612},
 }
 
+@article{Knuth:1976,
+ author = {Knuth, Donald E.},
+ title = {Big Omicron and Big Omega and Big Theta},
+ journal = {SIGACT News},
+ volume = {8},
+ number = {2},
+ pages = {18--24},
+ year = {1976},
+ doi = {10.1145/1008328.1008329},
+}
+
 @article{Li:2008,
   title = {A Strategy for Multi-objective Optimization under Uncertainty in Chemical Process Design},
   journal = {Chinese Journal of Chemical Engineering},
