major rewrite of ch4

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -376,6 +376,15 @@ author = {Sangdae, Park and Jung, Jae Hak},
 %    Books                                                                     %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@book{Korte:2012,
+  author = {Bernhard Korte and Jens Vygen},
+  title = {Combinatorial Optimization: Theory and Algorithms},
+  year = {2012},
+  publisher = {Springer-Verlag},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-642-24488-9},
+}
+
 @book{Martello:1990,
  author = {Martello, Silvano and Toth, Paolo},
  title = {Knapsack Problems: Algorithms and Computer Implementations},
@@ -383,7 +392,7 @@ author = {Sangdae, Park and Jung, Jae Hak},
  isbn = {0-471-92420-2},
  publisher = {John Wiley \& Sons, Inc.},
  address = {New York, NY, USA},
-} 
+}
 
 @book{Schaschke:2014,
   author = {Carl Schaschke},
@@ -394,14 +403,21 @@ author = {Sangdae, Park and Jung, Jae Hak},
   doi = {10.1093/acref/9780199651450.001.0001},
 }
 
-@book{Korte:2012,
-  author = {Bernhard Korte and Jens Vygen},
-  title = {Combinatorial Optimization: Theory and Algorithms},
-  year = {2012},
-  publisher = {Springer-Verlag},
-  address = {Berlin, Heidelberg},
-  doi = {10.1007/978-3-642-24488-9},
+@book{Taha:2017,
+  author = {Hamdy A. Taha},
+  title = {Operations Research: An Introduction},
+  year = {2017},
+  isbn = {9781292165547},
+  edition = {10th},
+  series= {Global Edition},
+  publisher = {Pearson},
+  address = {Harlow, UK},
 }
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%    In Books                                                                  %
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 @Inbook{Schaus:2012,
   author={Schaus, Pierre and Régin, Jean-Charles and Van Schaeren, Rowan and Dullaert, Wout and Raa, Birger},
